--- a/Assets/AirConsole/pacman/pacman-controller.html
+++ b/Assets/AirConsole/pacman/pacman-controller.html
@@ -15,10 +15,9 @@
 <body>
 
   <div id="controller-container">
-
-    <div id="view-0" class="view" style="display: flex;">
-    <div id="view-0-section-0" class="section " style="height: 100%;">
-    <div id="dpad" class="dpad-absolute-container">
+	<div id="view-0" class="view" style="display: flex;">
+		<div id="view-0-section-0" class="section " style="height: 100%;">
+		<div id="dpad" class="dpad-absolute-container">
 	  <div class="dpad-absolute" style="position: static;">
 		<div class="dpad-arrow dpad-arrow-up"></div>
 		<div class="dpad-arrow dpad-arrow-down"></div>
@@ -27,20 +26,18 @@
 	  </div>
 	</div>
 	</div>
-		<div id="view-0-section-1" class="section " style="height: 100%;">
-		<div id="start-button" class="button-300-150 button-element element">
+		<div id="view-0-section-2" class="section " style="height: 100%;">
+		<div id="start-button" class="button-300-300 button-element element">
 	  <div class="button-text">START</div>
 	</div>
-	<div id="quit-button" class="button-300-150 button-element element">
-	  <div class="button-text">QUIT</div>
 	</div>
-	</div>
-	</div>
+</div>
 
 
-	<script type="text/javascript">
-	  var ctrl_data = '{"orientation":"landscape","selected_view_id":"view-0","views":[{"id":"view-0","sections":[{"id":"view-0-section-0","elements":[{"id":"dpad","key":"dpad_absolute","name":"DPad Absolute","tmpl":"dpad","constructor_fn":"DPadAbsoluteElement","options":{"constructor_args":{"diagonal":true},"attr_id":"view-0-section-0-element-0","css_classes":"","view_action":{"target":null,"view_id":null}}}],"classes":[]},{"id":"view-0-section-1","elements":[{"id":"start-button","key":"button","name":"Button","tmpl":"button","constructor_fn":"ButtonElement","options":{"constructor_args":{},"attr_id":"view-0-section-1-element-0","css_classes":"button-300-150","view_action":{"target":null,"view_id":null},"label":"START","send_onrelease":false,"message_data":[]}},{"id":"quit-button","key":"button","name":"Button","tmpl":"button","constructor_fn":"ButtonElement","options":{"constructor_args":{},"attr_id":"view-0-section-1-element-1","css_classes":"button-300-150","view_action":{"target":null,"view_id":null},"label":"QUIT","send_onrelease":false,"message_data":[]}}],"classes":[]}]}]}';
-	</script>
+<script type="text/javascript">
+  var ctrl_data = '{"orientation":"landscape","selected_view_id":"view-0","views":[{"id":"view-0","sections":[{"id":"view-0-section-0","elements":[{"id":"dpad","key":"dpad_absolute","name":"DPad Absolute","tmpl":"dpad","constructor_fn":"DPadAbsoluteElement","options":{"constructor_args":{"diagonal":true},"attr_id":"dpad","css_classes":"","view_action":{"target":null,"view_id":null}}}],"classes":[]},{"id":"view-0-section-2","elements":[{"id":"start-button","key":"button","name":"Button","tmpl":"button","constructor_fn":"ButtonElement","options":{"constructor_args":{},"attr_id":"view-0-section-2-element-0","css_classes":"button-300-300","view_action":{"target":null,"view_id":null},"label":"START","send_onrelease":false,"message_data":[]}}],"classes":[]}]}]}';
+</script>
+
 
   </div>
 
